--- a/style.css
+++ b/style.css
@@ -11,4 +11,30 @@ header {
   position: fixed;
   width: 100%;
   top: 0;
+  z-index: 1000;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin: 20px;
+  padding: 20px;
+  background-color: #f9f9f9;
+  position: absolute;
+}
+
+.question,
+.answer {
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.answer {
+  display: none;
+}
+
+.hidden {
+  display: none;
 }
